Updated index.html and CSS

--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
     <link rel="stylesheet" href="screen.css">
   </head>
   <body>
-    <h1>Planetary</h1>
-    <h2>Baseball Cards</h2>
-    <script src="index.js"></script>
+    <container>
+      <h1>Planetary</h1>
+      <h2>Baseball Cards</h2>
+        <div class="image-grid">
+          <img class="image-grid-col-2 image-grid-row-2" src="Sun.jpg" alt="Sun Baseball Card">
+          <img src="Sun.jpg" alt="Sun Baseball Card">
+          <img src="Sun.jpg" alt="Sun Baseball Card">
+          <img src="Sun.jpg" alt="Sun Baseball Card">
+          <img src="Sun.jpg" alt="Sun Baseball Card">
+          <img src="Sun.jpg" alt="Sun Baseball Card">
+          <img src="Sun.jpg" alt="Sun Baseball Card">
+          <img src="Sun.jpg" alt="Sun Baseball Card">
+          <img src="Sun.jpg" alt="Sun Baseball Card">
+        </div>
+      <script src="index.js"></script>
+    </container>
   </body>
 </html>
