Updated index.html and css

--- a/index.html
+++ b/index.html
@@ -8,21 +8,20 @@
     <link rel="stylesheet" href="screen.css">
   </head>
   <body>
-    <container>
-      <h1>Planetary</h1>
-      <h2>Baseball Cards</h2>
+    <fieldset>
+      <legend>Planetary Baseball Cards</legend>
         <div class="image-grid">
           <img class="image-grid-col-2 image-grid-row-2" src="Sun.jpg" alt="Sun Baseball Card">
-          <img src="Sun.jpg" alt="Sun Baseball Card">
-          <img src="Sun.jpg" alt="Sun Baseball Card">
-          <img src="Sun.jpg" alt="Sun Baseball Card">
-          <img src="Sun.jpg" alt="Sun Baseball Card">
-          <img src="Sun.jpg" alt="Sun Baseball Card">
-          <img src="Sun.jpg" alt="Sun Baseball Card">
-          <img src="Sun.jpg" alt="Sun Baseball Card">
-          <img src="Sun.jpg" alt="Sun Baseball Card">
+          <img src="Uranus.jpg" alt="Sun Baseball Card">
+          <img src="Saturn.jpg" alt="Sun Baseball Card">
+          <img src="Mars.jpg" alt="Sun Baseball Card">
+          <img src="Group 2.jpg" alt="Sun Baseball Card">
+          <img src="Venus.jpg" alt="Sun Baseball Card">
+          <img src="Jupiter.jpg" alt="Sun Baseball Card">
+          <img src="Moon.jpg" alt="Sun Baseball Card">
+          <img src="Neptune.jpg" alt="Sun Baseball Card">
         </div>
       <script src="index.js"></script>
-    </container>
+    </fieldset>
   </body>
 </html>
