--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="screen.css">
   </head>
   <body>
+    <h2>New!</h2>
     <fieldset>
-      <legend>Planetary Baseball Cards</legend>
+      <legend>PLANETARY <span class="mono">BASEBALL CARDS</span></legend>
         <div class="image-grid">
           <img class="image-grid-col-2 image-grid-row-2" src="Sun.jpg" alt="Sun Baseball Card">
           <img src="Uranus.jpg" alt="Sun Baseball Card">
